Started issue 312 (still to do: disallow in batch)

--- a/src/tauargus/gui/DialogSpecifyTablesMicro.form
+++ b/src/tauargus/gui/DialogSpecifyTablesMicro.form
@@ -1373,6 +1373,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Apply weights"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="checkBoxApplyWeightsActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JCheckBox" name="checkBoxMissingSafe">
           <Properties>
